released version 2.0.0
- upgraded to Java 17
- upgraded to Spring Boot 3
- completely refactored auto-configuration of web security due to breaking changes in Spring Security 6